--- a/ios/Honeybee Wifi Config/Honeybee Wifi Config/Info.plist
+++ b/ios/Honeybee Wifi Config/Honeybee Wifi Config/Info.plist
@@ -15,13 +15,15 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Scans for broadcasted Honeybee BLE devices; establishes connection to Honeybee; sends commands to the Honeybee via BLE</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
